Updating to use Java 8